--- a/FRONTEND/src/app/module/cv/candidate-profile/candidate-profile.component.html
+++ b/FRONTEND/src/app/module/cv/candidate-profile/candidate-profile.component.html
@@ -46,29 +46,29 @@
 					[candidate]="candidate"
 					(refresh)="refreshPage()"></app-personal-detail>
 				<!-- EDUCATION -->
-				<app-candidate-education
+				<!-- <app-candidate-education
 					[candidate]="candidate"
-					(refresh)="refreshPage()"></app-candidate-education>
+					(refresh)="refreshPage()"></app-candidate-education> -->
 				<!-- WORK EXPERIENCE -->
-				<app-work-experience
+				<!-- <app-work-experience
 					[candidate]="candidate"
-					(refresh)="refreshPage()"></app-work-experience>
+					(refresh)="refreshPage()"></app-work-experience> -->
 				<!-- SKILLS -->
-				<app-candidate-skills
+				<!-- <app-candidate-skills
 					[candidate]="candidate"
-					(refresh)="refreshPage()"></app-candidate-skills>
+					(refresh)="refreshPage()"></app-candidate-skills> -->
 				<!-- PERSONAL PROJECT -->
-				<app-personal-project
+				<!-- <app-personal-project
 					[candidate]="candidate"
-					(refresh)="refreshPage()"></app-personal-project>
+					(refresh)="refreshPage()"></app-personal-project> -->
 				<!-- CERTIFICATE -->
-				<app-candidate-certificate
+				<!-- <app-candidate-certificate
 					[candidate]="candidate"
-					(refresh)="refreshPage()"></app-candidate-certificate>
+					(refresh)="refreshPage()"></app-candidate-certificate> -->
 				<!-- AWARDS -->
-				<app-candidate-awards
+				<!-- <app-candidate-awards
 					[candidate]="candidate"
-					(refresh)="refreshPage()"></app-candidate-awards>
+					(refresh)="refreshPage()"></app-candidate-awards> -->
 			</div>
 		</div>
 	</div>
