--- a/FRONTEND/src/app/module/event-detail/event-detail.component.html
+++ b/FRONTEND/src/app/module/event-detail/event-detail.component.html
@@ -1,85 +1,181 @@
-<div style="background-color: rgb(236, 236, 236); padding-bottom: 200px;">
+<div style="background-color: rgb(236, 236, 236); padding-bottom: 200px">
 	<div style="background-color: rgb(236, 236, 236)">
 		<div class="w-100" style="height: 400px">
 			@if (fetchedEvent?.imageURL) {
-			<img src="{{ fetchedEvent?.imageURL }}" class="w-100 h-100" alt="logo" />
-			}
-			@else {
-			<div class="w-100 h-100 text-white fw-bold fs-4"
-				style="padding-top: 50px; background: linear-gradient(to right, #1732c8, #f32929);">
-			</div>
+			<img
+				src="{{ fetchedEvent?.imageURL }}"
+				class="w-100 h-100"
+				alt="logo" />
+			} @else {
+			<div
+				class="w-100 h-100 text-white fw-bold fs-4"
+				style="
+					padding-top: 50px;
+					background: linear-gradient(to right, #1732c8, #f32929);
+				"></div>
 			}
 		</div>
 		<div class="shadow">
-			<div class="translate-middle" style="margin-left: 20%; margin-right: 20%; background-color: white;">
+			<div
+				class="translate-middle"
+				style="
+					margin-left: 20%;
+					margin-right: 20%;
+					background-color: white;
+				">
 				<div
 					class="rounded-3 position-absolute top-25 start-50 background-image d-flex flex-column justify-content-center">
-					<div class="rounded-2 shadow"
-						style="background-color: rgb(255, 255, 255); padding: 30px 30px 30px 30px; ">
+					<div
+						class="rounded-2 shadow"
+						style="
+							background-color: rgb(255, 255, 255);
+							padding: 30px 30px 30px 30px;
+						">
 						<div class="rounded-4 hover-overlay w-100">
 							<div class="row align-items-center">
 								<div class="col-lg-8 col-12 row h-100">
 									<div
 										class="col-lg-3 col-sm-4 col-5 d-flex justify-content-center align-items-center">
-										<img class="rounded-3" [src]="fetchedEvent?.recruiter?.company?.logo"
-											height="120px" width="120px" />
+										<img
+											class="rounded-3"
+											[src]="
+												fetchedEvent?.recruiter?.company
+													?.logo
+											"
+											height="120px"
+											width="120px" />
 									</div>
-									<div class="col-lg-9 col-sm-8 col-7 py-2" style="line-height: 25px;">
+									<div
+										class="col-lg-9 col-sm-8 col-7 py-2"
+										style="line-height: 25px">
 										<div class="fs-5">
-											{{fetchedEvent?.recruiter?.company?.companyName}}
+											{{
+												fetchedEvent?.recruiter?.company
+													?.companyName
+											}}
 										</div>
-										<div class="mt-1" style="font-size: medium;"><i
-												class="bi bi-telephone-fill"></i>
-											{{fetchedEvent?.recruiter?.company?.phone}}</div>
-										<div style="font-size: medium; word-break: break-all;"><i
-												class="bi bi-envelope-at"></i>
-											{{fetchedEvent?.recruiter?.company?.email}}</div>
-										<div style="font-size: medium; word-break: break-all;">
-											{{fetchedEvent?.recruiter?.company?.website}}</div>
+										<div
+											class="mt-1"
+											style="font-size: medium">
+											<i class="bi bi-telephone-fill"></i>
+											{{
+												fetchedEvent?.recruiter?.company
+													?.phone
+											}}
+										</div>
+										<div
+											style="
+												font-size: medium;
+												word-break: break-all;
+											">
+											<i class="bi bi-envelope-at"></i>
+											{{
+												fetchedEvent?.recruiter?.company
+													?.email
+											}}
+										</div>
+										<div
+											style="
+												font-size: medium;
+												word-break: break-all;
+											">
+											{{
+												fetchedEvent?.recruiter?.company
+													?.website
+											}}
+										</div>
 									</div>
 								</div>
-								<div class="mt-2 col-lg-4 col-12 d-flex flex-column align-items-end"
-									style="line-height: 25px;">
-									<div class="fs-4 fw-bold ">
-										{{fetchedEvent?.eventName}}</div>
-									<div class="mt-1" style="font-size: medium;"><i class="bi bi-building"></i>
-										{{fetchedEvent?.place}}</div>
-									<div style="font-size: medium;"><i class="bi bi-clock-fill"></i> Start:
-										{{fetchedEvent?.startDateTime | date : 'medium'}}
+								<div
+									class="mt-2 col-lg-4 col-12 d-flex flex-column align-items-end"
+									style="line-height: 25px">
+									<div class="fs-4 fw-bold">
+										{{ fetchedEvent?.eventName }}
 									</div>
-									<div style="font-size: medium;"><i class="bi bi-clock-fill"></i> End:
-										{{fetchedEvent?.endDateTime | date : 'medium'}}
+									<div class="mt-1" style="font-size: medium">
+										<i class="bi bi-building"></i>
+										{{ fetchedEvent?.place }}
+									</div>
+									<div style="font-size: medium">
+										<i class="bi bi-clock-fill"></i> Start:
+										{{
+											fetchedEvent?.startDateTime
+												| date : 'medium'
+										}}
+									</div>
+									<div style="font-size: medium">
+										<i class="bi bi-clock-fill"></i> End:
+										{{
+											fetchedEvent?.endDateTime
+												| date : 'medium'
+										}}
 									</div>
 								</div>
 								<div
 									class="mt-2 col-12 d-flex justify-content-lg-end flex-lg-row flex-column align-items-end">
-									@if(this.curentUserRoles?.includes('Candidate') || this.curentUserRoles === null) {
-									@if (this.alreadyJoinedEvent === true){
-									<div class="me-lg-2 my-lg-0 my-1" (click)="callApiDeleteCandidateJoinEvent()">
-										<app-expandbutton notExpandedWidth="100px" color="primary" expandedWidth="250px"
-											expandedLabel="Left This Event" notExpandLabel="Left"
+									@if(this.curentUserRoles?.includes('Candidate')
+									|| this.curentUserRoles === null) { @if
+									(this.alreadyJoinedEvent === true){
+									<div
+										class="me-lg-2 my-lg-0 my-1"
+										(click)="
+											callApiDeleteCandidateJoinEvent()
+										">
+										<app-expandbutton
+											notExpandedWidth="100px"
+											color="primary"
+											expandedWidth="250px"
+											expandedLabel="Left This Event"
+											notExpandLabel="Left"
 											icon="check"></app-expandbutton>
 									</div>
-									}
-									@else {
-									<div class="me-lg-2 my-lg-0 my-1" (click)="callApiCandidateJoinEvent()">
-										<app-expandbutton notExpandedWidth="100px" color="accent" expandedWidth="250px"
-											expandedLabel="Join This Event" notExpandLabel="Join"
+									} @else {
+									<div
+										class="me-lg-2 my-lg-0 my-1"
+										(click)="callApiCandidateJoinEvent()">
+										<app-expandbutton
+											notExpandedWidth="100px"
+											color="accent"
+											expandedWidth="250px"
+											expandedLabel="Join This Event"
+											notExpandLabel="Join"
 											icon="check"></app-expandbutton>
 									</div>
-									}
-
-									}
-									<div class="me-lg-2 my-lg-0 my-1"
-										(click)="openQRCodeDialog(this.fetchedEvent ?? {}, '100ms', '0ms')">
-										<app-expandbutton notExpandedWidth="100px" color="primary" expandedWidth="250px"
-											expandedLabel="Open QR Code" notExpandLabel="QR"
+									} }
+									<div
+										class="me-lg-2 my-lg-0 my-1"
+										(click)="
+											openQRCodeDialog(
+												this.fetchedEvent ?? {},
+												'100ms',
+												'0ms'
+											)
+										">
+										<app-expandbutton
+											notExpandedWidth="100px"
+											color="primary"
+											expandedWidth="250px"
+											expandedLabel="Open QR Code"
+											notExpandLabel="QR"
 											icon="QR"></app-expandbutton>
 									</div>
-									@if (this.curentUserRoles?.includes('Recruiter')) {
-									<div class="my-lg-0 my-1" (click)="openCandidateListDialog('100ms', '0ms')">
-										<app-expandbutton notExpandedWidth="170px" color="accent" expandedWidth="250px"
-											expandedLabel="Open Candidate List" notExpandLabel="Candidate List"
+									@if
+									(this.curentUserRoles?.includes('Recruiter'))
+									{
+									<div
+										class="my-lg-0 my-1"
+										(click)="
+											openCandidateListDialog(
+												'100ms',
+												'0ms'
+											)
+										">
+										<app-expandbutton
+											notExpandedWidth="170px"
+											color="accent"
+											expandedWidth="250px"
+											expandedLabel="Open Candidate List"
+											notExpandLabel="Candidate List"
 											icon="people"></app-expandbutton>
 									</div>
 									}
@@ -91,59 +187,107 @@
 			</div>
 		</div>
 		<div style="margin-top: 80px">
-			<div class="shadow custom-container p-4 fs-5 d-flex flex-column rounded-3"
-				style="background-color: rgb(255, 255, 255); height: 800px;">
-				<div class="w-100 d-flex justify-content-center lead px-4" style="margin-top: 50px;">
-					<em>{{fetchedEvent?.description}}</em>
+			<div
+				class="shadow custom-container p-4 fs-5 d-flex flex-column rounded-3"
+				style="background-color: rgb(255, 255, 255); height: 800px">
+				<div
+					class="w-100 d-flex justify-content-center lead px-4"
+					style="margin-top: 50px">
+					<em>{{ fetchedEvent?.description }}</em>
 				</div>
-				<div class="w-100 d-flex justify-content-center px-4 fs-4 fw-bold" style="margin-top: 50px;"> POSITIONS
+				<div
+					class="w-100 d-flex justify-content-center px-4 fs-4 fw-bold"
+					style="margin-top: 50px">
+					POSITIONS
 				</div>
-				<div class="m-2 border border-dark d-flex flex-wrap mt-4 mx-4" style="height: 500px; overflow-y: auto;">
+				<div
+					class="m-2 border border-dark d-flex flex-wrap mt-4 mx-4"
+					style="height: 500px; overflow-y: auto">
 					@for (item of fetchedEvent?.eventHasPositions; track item) {
-					<div class="custom-event border border-dark card custom-hover p-2">
-						<div style="margin-left: 4%; line-height: 30px;">
-							<div class="fs-5 custom-row" style="font-weight: 500; cursor: pointer;">
-								<span [routerLink]="['/positions/detail', item.position?.positionId]">{{
-									item.position?.positionName| uppercase }}</span>
+					<div
+						class="custom-event border border-dark card custom-hover p-2">
+						<div style="margin-left: 4%; line-height: 30px">
+							<div
+								class="fs-5 custom-row"
+								style="font-weight: 500; cursor: pointer">
+								<span
+									[routerLink]="[
+										'/positions/detail',
+										item.position?.positionId
+									]"
+									>{{
+										item.position?.positionName | uppercase
+									}}</span
+								>
 							</div>
-							<div class="custom-row"> {{ item.position?.company?.companyName }}</div>
-							<div class="custom-row" style="color: rgb(251, 115, 74);">
-								@if (item.position?.minSalary && item.position?.maxSalary) {
-								@if (item.position?.minSalary === item.position?.maxSalary) {
+							<div class="custom-row">
+								{{ item.position?.company?.companyName }}
+							</div>
+							<div
+								class="custom-row"
+								style="color: rgb(251, 115, 74)">
+								@if (item.position?.minSalary &&
+								item.position?.maxSalary) { @if
+								(item.position?.minSalary ===
+								item.position?.maxSalary) {
 
-								{{'$' + item.position?.minSalary}}
-								}
-								@else {
-								{{'$' + item.position?.minSalary + ' - ' + '$'+item.position?.maxSalary}}
-								}
-								}
-								@else if (item.position?.minSalary) {
-								{{'$' +item.position?.minSalary + ' and higher'}}
-								}
-								@else if (item.position?.maxSalary) {
-								{{'Up to $'+ item.position?.maxSalary}}
-								}
-								@else {
-								$ Negotiable
-								}
-							</div>
-							<div class="custom-row"> Max hiring quantity: {{ item.position?.maxHiringQty }}</div>
-							<div class="custom-row"><i class="bi bi-calendar3"></i> {{ item.position?.startDate |
-								date:'dd/MM/yyyy' }}
-								- {{ item.position?.endDate |
-								date:'dd/MM/yyyy' }}</div>
-							<div class="custom-row rounded-2"
-								style="padding: 2px 2px 2px 2px; background-color: rgb(224, 224, 224) ;width: fit-content;">
+								{{ '$' + item.position?.minSalary }}
+								} @else {
 								{{
-								item.position?.language?.languageName}}</div>
+									'$' +
+										item.position?.minSalary +
+										' - ' +
+										'$' +
+										item.position?.maxSalary
+								}}
+								} } @else if (item.position?.minSalary) {
+								{{
+									'$' +
+										item.position?.minSalary +
+										' and higher'
+								}}
+								} @else if (item.position?.maxSalary) {
+								{{ 'Up to $' + item.position?.maxSalary }}
+								} @else { $ Negotiable }
+							</div>
+							<div class="custom-row">
+								Max hiring quantity:
+								{{ item.position?.maxHiringQty }}
+							</div>
+							<div class="custom-row">
+								<i class="bi bi-calendar3"></i>
+								{{
+									item.position?.startDate
+										| date : 'dd/MM/yyyy'
+								}}
+								-
+								{{
+									item.position?.endDate | date : 'dd/MM/yyyy'
+								}}
+							</div>
+							<div
+								class="custom-row rounded-2"
+								style="
+									padding: 2px 2px 2px 2px;
+									background-color: rgb(224, 224, 224);
+									width: fit-content;
+								">
+								{{ item.position?.language?.languageName }}
+							</div>
 						</div>
-						<div class="mt-2 d-flex justify-content-center flex-row">
-							<div class="me-2">
-								<app-expandbutton notExpandedWidth="100px" color="accent" expandedWidth="250px"
-									expandedLabel="Apply now to get priority" notExpandLabel="Apply"
+						<div
+							class="mt-2 d-flex justify-content-center flex-row">
+							<div
+								class="me-2"
+								(click)="openApplyDialog(item.position!)">
+								<app-expandbutton
+									notExpandedWidth="100px"
+									color="accent"
+									expandedWidth="250px"
+									expandedLabel="Apply now to get priority"
+									notExpandLabel="Apply"
 									icon="add"></app-expandbutton>
 							</div>
-
 						</div>
 					</div>
 					}
@@ -151,3 +295,4 @@
 			</div>
 		</div>
 	</div>
+</div>
