--- a/FRONTEND/src/app/module/cv/candidate-profile/personal-detail/personal-detail.component.html
+++ b/FRONTEND/src/app/module/cv/candidate-profile/personal-detail/personal-detail.component.html
@@ -2,12 +2,17 @@
 <div class="card-body">
 	<div class="card shadow-sm">
 		<div class="card-body">
-			<div class="h4">{{ candidate?.user?.fullName }}</div>
+			<div class="h4">
+				{{ candidate?.user?.fullName }}
+			</div>
 			<h4>{{ candidate?.user?.title }}</h4>
+			<p><b>UserId:</b> {{ candidate?.user?.id }}</p>
 			<div class="container">
 				<div class="row">
 					<div class="col">
-						<i class="fa-regular fa-envelope p-2" aria-hidden="true"></i>
+						<i
+							class="fa-regular fa-envelope p-2"
+							aria-hidden="true"></i>
 						<span
 							><b>Email: </b>
 							<a
@@ -33,18 +38,33 @@
 				</div>
 				<div class="row">
 					<div class="col">
-						<i class="fa-regular fa-calendar p-2" aria-hidden="true"></i>
-						<span><b>Birthday</b>: {{ candidate?.user?.dateOfBirth | date : 'dd/MM/yyyy' }} </span>
+						<i
+							class="fa-regular fa-calendar p-2"
+							aria-hidden="true"></i>
+						<span
+							><b>Birthday</b>:
+							{{
+								candidate?.user?.dateOfBirth
+									| date : 'dd/MM/yyyy'
+							}}
+						</span>
 					</div>
 					<div class="col">
 						<i class="fa fa-venus p-2" aria-hidden="true"></i>
-						<span><b>Gender</b>: {{ candidate?.user?.gender | uppercase }}</span>
+						<span
+							><b>Gender</b>:
+							{{ candidate?.user?.gender | uppercase }}</span
+						>
 					</div>
 				</div>
 				<div class="row">
 					<div class="col">
-						<i class="fa fa-address-book p-2" aria-hidden="true"></i>
-						<span><b>Addres</b>: {{ candidate?.user?.address }}</span>
+						<i
+							class="fa fa-address-book p-2"
+							aria-hidden="true"></i>
+						<span
+							><b>Addres</b>: {{ candidate?.user?.address }}</span
+						>
 					</div>
 					<div class="col">
 						<i class="fa fa-globe p-2" aria-hidden="true"></i>
@@ -62,7 +82,11 @@
 			</div>
 		</div>
 		<div class="position-absolute top-4 end-0 p-2">
-			<button mat-button (click)="openDialog()" ngbTooltip="Update information" placement="bottom">
+			<button
+				mat-button
+				(click)="openDialog()"
+				ngbTooltip="Update information"
+				placement="bottom">
 				<i class="fa-regular fa-pen-to-square text-danger"></i>
 			</button>
 		</div>
@@ -70,21 +94,24 @@
 </div>
 
 <!-- ABOUT ME -->
-<div class="card-body">
+<!-- <div class="card-body">
 	<div class="card shadow-sm">
 		<div class="card-body">
 			<div class="h4">About me</div>
 			<mat-divider></mat-divider>
 			<div class="py-3">
 				<p>
-					Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui minus non exercitationem aut iusto
-					dolorum, veniam atque sit sint, ea placeat dolores incidunt cupiditate, delectus maiores dignissimos
-					quo temporibus! Officiis.
+					Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+					Qui minus non exercitationem aut iusto dolorum, veniam atque
+					sit sint, ea placeat dolores incidunt cupiditate, delectus
+					maiores dignissimos quo temporibus! Officiis.
 				</p>
 				<p>
-					Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur itaque maiores exercitationem
-					quaerat reiciendis, asperiores quis explicabo unde praesentium! Optio quo deserunt iste officia
-					doloremque dicta, quod aliquam. Modi, fugiat?
+					Lorem ipsum dolor sit amet consectetur adipisicing elit.
+					Consequatur itaque maiores exercitationem quaerat
+					reiciendis, asperiores quis explicabo unde praesentium!
+					Optio quo deserunt iste officia doloremque dicta, quod
+					aliquam. Modi, fugiat?
 				</p>
 			</div>
 		</div>
@@ -94,4 +121,4 @@
 			</button>
 		</div>
 	</div>
-</div>
+</div> -->
