--- a/FRONTEND/src/app/module/interview/interview-start/question-transfer/question-transfer.component.html
+++ b/FRONTEND/src/app/module/interview/interview-start/question-transfer/question-transfer.component.html
@@ -52,7 +52,7 @@
 							<td>{{ question.text }}</td>
 							<td>
 								<mat-form-field>
-									<mat-label>Điểm</mat-label>
+									<mat-label>Score</mat-label>
 									<input
 										matInput
 										type="number"
