--- a/FrontEnd/src/app/app.component.html
+++ b/FrontEnd/src/app/app.component.html
@@ -7,7 +7,7 @@
 	</div>
 	}
 	<router-outlet class="px-5 mx-5"></router-outlet>
-	<app-footer class="pt-3 mt-auto"></app-footer>
+	<!-- <app-footer class="pt-3 mt-auto"></app-footer> -->
 </div>
 
 <!-- MDB -->
