--- a/FRONTEND/src/app/module/admin/generic/generic-table.component.html
+++ b/FRONTEND/src/app/module/admin/generic/generic-table.component.html
@@ -1,19 +1,31 @@
 <div class="pb-3">
 	@if (this.actions !== undefined && this.actions.includes('create')){
-	<button mat-raised-button color="primary" (click)="createData()" class="w-100">Create</button>
+	<button
+		mat-raised-button
+		color="primary"
+		(click)="createData()"
+		class="w-100">
+		Create
+	</button>
 	}
 </div>
 
 <mat-form-field>
 	<mat-label>Filter</mat-label>
-	<input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia" #input />
+	<input
+		matInput
+		(keyup)="applyFilter($event)"
+		placeholder="Ex. Mia"
+		#input />
 </mat-form-field>
 
-<div class="mat-elevation-z8" style="overflow-x: scroll;">
+<div class="mat-elevation-z8" style="overflow-x: scroll">
 	<table mat-table [dataSource]="dataSource" matSort multiTemplateDataRows>
 		@for (col of listProps; track $index) {
 		<ng-container matColumnDef="{{ displayedColumns[$index] }}">
-			<th mat-header-cell *matHeaderCellDef mat-sort-header="{{ col }}">{{ displayedColumns[$index] }}</th>
+			<th mat-header-cell *matHeaderCellDef mat-sort-header="{{ col }}">
+				{{ displayedColumns[$index] }}
+			</th>
 			<td mat-cell *matCellDef="let row">{{ row[col] }}</td>
 		</ng-container>
 		}
@@ -26,7 +38,10 @@
 				<button
 					mat-icon-button
 					aria-label="expand row"
-					(click)="expandedElement = expandedElement === row ? null : row; $event.stopPropagation()">
+					(click)="
+						expandedElement = expandedElement === row ? null : row;
+						$event.stopPropagation()
+					">
 					@if (expandedElement === row) {
 					<mat-icon>keyboard_arrow_up</mat-icon>
 					} @else {
@@ -46,7 +61,10 @@
 				<button
 					mat-icon-button
 					aria-label="expand row"
-					(click)="expandedElement = expandedElement === row ? null : row; $event.stopPropagation()">
+					(click)="
+						expandedElement = expandedElement === row ? null : row;
+						$event.stopPropagation()
+					">
 					@if (expandedElement === row) {
 					<mat-icon>keyboard_arrow_up</mat-icon>
 					} @else {
@@ -59,25 +77,28 @@
 				</button>
 				} @if (this.actions.includes('delete')) {
 				<button mat-icon-button color="warn" (click)="delete(row)">
-					<mat-icon>delete</mat-icon>
-				</button>}
-				@if (this.actions.includes('accept')) {
+					<mat-icon>delete</mat-icon></button
+				>} @if (this.actions.includes('accept')) {
 				<button mat-icon-button color="warn" (click)="accept(row)">
-					<mat-icon style="color: green;">done</mat-icon>
-				</button>}
-				@if (this.actions.includes('deny')) {
+					<mat-icon style="color: green">done</mat-icon></button
+				>} @if (this.actions.includes('deny')) {
 				<button mat-icon-button color="warn" (click)="deny(row)">
-					<mat-icon style="color: red;">close</mat-icon>
-				</button>}
-				}
-
+					<mat-icon style="color: red">close</mat-icon></button
+				>} }
 			</td>
 		</ng-container>
 
 		<!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
 		<ng-container matColumnDef="expandedDetail">
-			<td mat-cell *matCellDef="let row" [attr.colspan]="columnsToDisplayWithExpand.length">
-				<div class="element-detail w-100" [@detailExpand]="row == expandedElement ? 'expanded' : 'collapsed'">
+			<td
+				mat-cell
+				*matCellDef="let row"
+				[attr.colspan]="columnsToDisplayWithExpand.length">
+				<div
+					class="element-detail w-100"
+					[@detailExpand]="
+						row == expandedElement ? 'expanded' : 'collapsed'
+					">
 					<div class="element-diagram py-2 w-100">
 						@for (col of detailListProps; track $index) {
 						<div class="row g-0" style="font-size: 14px">
@@ -86,7 +107,9 @@
 								style="word-break: break-all">
 								{{ this.detailDisplayedColumns[$index] }} :
 							</div>
-							<div class="col-9 border border-1 border-secondary p-2" style="word-break: break-all">
+							<div
+								class="col-9 border border-1 border-secondary p-2"
+								style="word-break: break-all">
 								{{ row[col] }}
 							</div>
 						</div>
@@ -105,14 +128,23 @@
 			*matRowDef="let row; columns: columnsToDisplayWithExpand"
 			class="element-row"
 			[class.expanded-row]="expandedElement === row"
-			(click)="expandedElement = expandedElement === row ? null : row"></tr>
-		<tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="detail-row"></tr>
+			(click)="
+				expandedElement = expandedElement === row ? null : row
+			"></tr>
+		<tr
+			mat-row
+			*matRowDef="let row; columns: ['expandedDetail']"
+			class="detail-row"></tr>
 
 		<!-- Row shown when there is no matching data. -->
 		<tr class="mat-row" *matNoDataRow>
-			<td class="mat-cell" colspan="4">No data matching the filter "{{ input.value }}"</td>
+			<td class="mat-cell" colspan="4">
+				No data matching the filter "{{ input.value }}"
+			</td>
 		</tr>
 	</table>
 
-	<mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
+	<mat-paginator
+		[pageSizeOptions]="[5, 10, 25, 100]"
+		aria-label="Select page of users"></mat-paginator>
 </div>
