--- a/FRONTEND/src/app/module/interview/list-interview/list-interview.component.html
+++ b/FRONTEND/src/app/module/interview/list-interview/list-interview.component.html
@@ -14,7 +14,7 @@
 					<div class="col-12">
 						<div class="row">
 							<ng-container>
-								<div
+								<!-- <div
 									class="col-12 col-md-3 mb-3"
 									*ngIf="role && role !== 'Interviewer'">
 									<mat-form-field
@@ -37,11 +37,9 @@
 											</mat-option>
 										</mat-select>
 									</mat-form-field>
-								</div>
+								</div> -->
 
-								<div
-									*ngIf="companyChoose"
-									class="col-12 col-md-5 mb-3">
+								<div class="col-12 col-md-5 mb-3">
 									<mat-form-field
 										appearance="fill"
 										class="w-100">
@@ -53,9 +51,8 @@
 													$event.value
 												)
 											">
-											<mat-option
-												*ngFor="let pos of positions"
-												[value]="pos">
+											@for (pos of positions; track pos ){
+											<mat-option [value]="pos">
 												{{
 													pos.positionId!.slice(
 														0,
@@ -66,6 +63,7 @@
 														pos.positionName
 												}}
 											</mat-option>
+											}
 										</mat-select>
 									</mat-form-field>
 								</div>
@@ -135,7 +133,11 @@
 			</div>
 
 			<ng-container *ngIf="dataSource && role !== null">
-				<table mat-table [dataSource]="dataSource" class="w-100">
+				<table
+					mat-table
+					matSort
+					[dataSource]="dataSource"
+					class="w-100">
 					<ng-container matColumnDef="InterviewId">
 						<th mat-header-cell *matHeaderCellDef>ID</th>
 						<td mat-cell *matCellDef="let interview">
@@ -145,7 +147,10 @@
 						</td>
 					</ng-container>
 					<ng-container matColumnDef="CandidateName">
-						<th mat-header-cell *matHeaderCellDef>
+						<th
+							mat-header-cell
+							mat-sort-header="candidateName"
+							*matHeaderCellDef>
 							Candidate name
 						</th>
 						<td mat-cell *matCellDef="let interview">
@@ -164,7 +169,12 @@
 						</td>
 					</ng-container>
 					<ng-container matColumnDef="MeetingDate">
-						<th mat-header-cell *matHeaderCellDef>Meeting Date</th>
+						<th
+							mat-header-cell
+							mat-sort-header="MeetingDate"
+							*matHeaderCellDef>
+							Meeting Date
+						</th>
 						<td mat-cell *matCellDef="let interview">
 							{{ interview.meetingDate | date : 'dd/MM/yyyy' }}
 						</td>
@@ -176,7 +186,12 @@
 						</td>
 					</ng-container>
 					<ng-container matColumnDef="Location">
-						<th mat-header-cell *matHeaderCellDef>Location</th>
+						<th
+							mat-header-cell
+							mat-sort-header="location"
+							*matHeaderCellDef>
+							Location
+						</th>
 						<td mat-cell *matCellDef="let interview">
 							{{ interview.addressOrStartURL }}
 						</td>
@@ -187,9 +202,6 @@
 							<span
 								class="p-2 rounded text-white"
 								[ngClass]="{
-									'bg-danger ':
-										interview.interviewType !==
-										getTypeValue.FACE2FACE,
 									'bg-primary':
 										interview.interviewType ===
 										getTypeValue.FACE2FACE,
@@ -198,7 +210,8 @@
 										getTypeValue.ONLINE_GG_MEET
 								}">
 								{{
-									interview.notes === getTypeValue.FACE2FACE
+									interview.interviewType ===
+									getTypeValue.FACE2FACE
 										? 'Face to Face'
 										: 'Online (Google Meet)'
 								}}
